--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@neo-one/client-core": "^2.5.0",
+    "@neo-one/client-full-core": "^2.5.0",
     "@neo-one/node-core": "^2.4.0",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
